[package]
name = "halo2_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# halo2_proofs = { git = "https://github.com/zcash/halo2.git" }
halo2_proofs = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_01_20" }
# halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = "0.3.1" }
halo2curves = { package = "halo2curves", git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = "0.3.1" }

# mpt-circuits = { package = "halo2-mpt-circuits", git = "https://github.com/scroll-tech/mpt-circuit.git", branch = "scroll-dev-0111" }

rand_core = { version = "0.6", default-features = false }

group = "0.13"