[package]
name = "halo2_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# halo2_proofs = { git = "https://github.com/zcash/halo2.git" }
halo2_proofs = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_01_20" }
# halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = "0.3.1" }
halo2curves = { package = "halo2curves", git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = "0.3.1" }

hash-circuit = { package = "poseidon-circuit", git = "https://github.com/scroll-tech/poseidon-circuit.git", branch = "scroll-dev-0201"}


rand = "0.8"
rand_core = { version = "0.6", default-features = false }

lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
hex = "0.4"
thiserror = "1.0"
log = "0.4"

group = "0.13"

rand_chacha = "0.3.0"